Start working on the SOAR individual settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -209,6 +209,11 @@ button.standard:hover:not([disabled]) {
 .MuiPopover-paper .MuiFormControl-root .MuiTypography-root {
   color: var(--primaryTextColor);
 }
+.MuiMenu-list li {
+  .fg {
+    padding: 0px 5px;
+  }
+}
 .c-popover {
   color: var(--primaryTextColor) !important;
   background-color: var(--primaryContentBackground) !important;
