Update react flow area.

--- a/less/app.less
+++ b/less/app.less
@@ -1323,6 +1323,7 @@ button.standard:hover:not([disabled]) {
     &.soar-flow {
       .flow-wrapper {
         display: flex;
+        height: 78vh;
       }
       aside {
         overflow-y: auto;
@@ -1356,6 +1357,9 @@ button.standard:hover:not([disabled]) {
           justify-content: flex-end;
           padding: 15px;
           border-bottom: 1px solid var(--primaryBorder);
+        }
+        .react-flow {
+          height: 70vh;
         }
       }
       .dndnode {
