Implement the form fields and APIs for SOAR settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -1323,12 +1323,11 @@ button.standard:hover:not([disabled]) {
     &.soar-flow {
       .flow-wrapper {
         display: flex;
-        height: 78vh;
+        height: 72vh;
       }
       aside {
         overflow-y: auto;
         font-size: 12px;
-        height: 87vh;
         max-width: 250px;
         width: 20%;
         padding: 20px 0;
@@ -1359,7 +1358,7 @@ button.standard:hover:not([disabled]) {
           border-bottom: 1px solid var(--primaryBorder);
         }
         .react-flow {
-          height: 70vh;
+          height: 62vh;
         }
       }
       .dndnode {
@@ -1395,6 +1394,13 @@ button.standard:hover:not([disabled]) {
         padding-top: 15px;
         margin-top: 25px;
         border-top: 1px solid #ccc;
+        button {
+          margin: 0 5px;
+        }
+      }
+      .footer {
+        text-align: right;
+        padding: 10px 15px;
         button {
           margin: 0 5px;
         }
