Implement the node/link/adapter settings.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1723,8 +1723,6 @@ html[data-theme='dark'] {
 #accountEditDialog {
   .account-form {
     .basic-info {
-      width: 80%;
-      margin: 0 auto;
       &.more {
         float: left;
         width: 50%;
@@ -2352,8 +2350,12 @@ html[data-theme='dark'] {
     }
   }
 }
-#ruleEditDialog-content {
+#soarSettingsDialog-content {
+  width: 350px;
+  .soar-form {
+    margin: 10px;
+  }
   .group {
-    margin: 5px 0;
+    margin: 15px 0;
   }
 }
