Complete the implementation for SOAR page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -278,6 +278,16 @@ html[data-theme='dark'] {
         color: red;
       }
     }
+    .soar-error-table {
+      margin: 10px;
+      .header {
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+      .c-table {
+        width: 100%;
+      }
+    }
   }
   footer {
     text-align: center;
