--- a/less/modal.less
+++ b/less/modal.less
@@ -281,11 +281,14 @@ html[data-theme='dark'] {
     .soar-error-table {
       margin: 10px;
       .header {
-        font-weight: bold;
-        margin-bottom: 5px;
+        color: #d10d25;
+        margin-bottom: 15px;
       }
       .c-table {
         width: 100%;
+        th {
+          padding: 5px 7px;
+        }
       }
     }
   }
