Update NCCST button logic.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2335,6 +2335,7 @@ html[data-theme='dark'] {
   max-height: 400px;
 }
 #reportNCCSTdialog-content {
+  text-align: center;
   max-height: 400px;
   padding: 25px;
 }
