Start implementing the multi filter form for Host page.

--- a/less/app.less
+++ b/less/app.less
@@ -2043,6 +2043,11 @@ button.standard:hover:not([disabled]) {
                 margin: 5px 0px -10px 10px;
               }
             }
+            &.host {
+              .group {
+                width: 25%;
+              }
+            }
           }
         }
       }
