--- a/less/modal.less
+++ b/less/modal.less
@@ -2420,3 +2420,11 @@ html[data-theme='dark'] {
 #soarTestingDialog-content {
   width: 1280px;
 }
+#hostFilterPopover {
+  .content {
+    padding: 15px 10px 5px 10px;
+    .group {
+      margin-bottom: 10px;
+    }
+  }
+}
