--- a/less/modal.less
+++ b/less/modal.less
@@ -2422,9 +2422,17 @@ html[data-theme='dark'] {
 }
 #hostFilterPopover {
   .content {
+    width: 330px;
     padding: 15px 10px 5px 10px;
     .group {
       margin-bottom: 10px;
+      textarea,
+      .combo-box {
+        width: 100%;
+      }
+      textarea {
+        padding: 5px;
+      }
     }
   }
 }
