Update multi input button style.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2434,5 +2434,9 @@ html[data-theme='dark'] {
         padding: 5px;
       }
     }
+    .fg-add {
+      color: #fff;
+      background-color: var(--formCheckRadioColor) !important;
+    }
   }
 }
