Start implementing the query open/save for Host.

--- a/less/app.less
+++ b/less/app.less
@@ -1942,9 +1942,9 @@ button.standard:hover:not([disabled]) {
           }
           .open-query,
           .save-query {
-            font-size: 15px;
+            font-size: 13px;
             color: var(--buttonTextColor);
-            margin: 5px;
+            margin: 5px 2px;
             padding: 0 10px;
             background: none;
           }
