--- a/less/modal.less
+++ b/less/modal.less
@@ -1887,6 +1887,9 @@ html[data-theme='dark'] {
     border-radius: 5px;
     background-color: var(--dialogFormGroup);
     clear: both;
+    .group {
+      margin-bottom: 15px;
+    }
   }
   .checkbox-ui {
     margin-left: 5px;
