Fix SOAR data gets polluted bug. Implement the update seat name functionality.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1579,6 +1579,18 @@ html[data-theme='dark'] {
       margin-bottom: 2px;
     }
   }
+  .seat-name {
+    margin-bottom: 15px;
+    span {
+      color: var(--primaryContentHeader);
+      font-weight: bold;
+    }
+    button.edit {
+      font-size: 10px;
+      padding: .01em;
+      margin-left: 5px;
+    }
+  }
   .info {
     clear: both;
     span {
