--- a/less/modal.less
+++ b/less/modal.less
@@ -309,9 +309,10 @@ html[data-theme='dark'] {
 #viewJsonDialog-dialog {
   .json-data {
     height: 680px;
-    overflow-y: auto;
+    padding: 10px;
     border: 1px solid var(--primaryBorder);
     border-radius: 5px;
+    overflow-y: auto;
     & > li {
       padding: 5px 10px;
       ul {
@@ -395,7 +396,7 @@ html[data-theme='dark'] {
   }
   .json-data {
     &.alert {
-      height: 395px;
+      height: 445px;
       border: none;
       & > li {
         padding: 0;
@@ -1039,6 +1040,11 @@ html[data-theme='dark'] {
     min-height: 500px;
     border: 1px solid var(--primaryBorder);
     border-radius: 5px;
+    .btn.json {
+      position: absolute;
+      top: 10px;
+      padding: .01em .5em;
+    }
     & > .nav {
       min-width: 230px;
       border-right: 1px solid var(--primaryBorder);
