Change no result display logic for MUI data table and other bug fixes.

--- a/less/app.less
+++ b/less/app.less
@@ -600,6 +600,10 @@ button.standard:hover:not([disabled]) {
 }
 .mui-table-content {
   height: 78vh;
+  .no-result {
+    text-align: center;
+    margin-top: 100px;
+  }
   span.loading {
     display: block;
     text-align: center;
