--- a/less/modal.less
+++ b/less/modal.less
@@ -1751,7 +1751,7 @@ html[data-theme='dark'] {
       &.more {
         float: left;
         width: 50%;
-        margin-right: 5%;
+        margin-right: 10px;
       }
     }
     .group {
@@ -2458,6 +2458,21 @@ html[data-theme='dark'] {
     .fg-add {
       color: #fff;
       background-color: var(--formCheckRadioColor) !important;
+    }
+  }
+}
+#adConfigModalDialog-content {
+  width: 750px;
+  height: 200px;
+  overflow-x: hidden;
+  .content {
+    .switch {
+      margin-top: 20px;
+      margin-left: 10px;
+      label,
+      button {
+        float: left;
+      }
     }
   }
 }
