Update logic for Forgot Password flow.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2486,7 +2486,10 @@ html[data-theme='dark'] {
     padding: 20px;
     .desc-text {
       font-size: 15px;
-      margin-bottom: 25px;
+      margin-bottom: 5px;
+    }
+    .login-group {
+      margin-top: 20px;
     }
   }
 }
