Add caps lock message for login form. Fix Vans notes bug.

--- a/less/login.less
+++ b/less/login.less
@@ -60,13 +60,23 @@ html[data-theme='dark'] {
     button {
       display: block;
       width: 100%;
+      margin-top: 15px;
       padding: 8px 43px;
       &.multiple-btn {
         margin-bottom: 10px;
       }
     }
     .login-group {
-      margin-bottom: 25px;
+      &.top {
+        margin-bottom: 25px;
+      }
+      &.bottom {
+        margin-bottom: 10px;
+      }
+    }
+    .caps-lock {
+      color: #f44336;
+      font-size: 14px;
     }
     .login-options {
       color: #004d93;
