Various bug fixes.

--- a/less/app.less
+++ b/less/app.less
@@ -2238,6 +2238,12 @@ button.standard:hover:not([disabled]) {
                   padding: 0 10px;
                   border-left: 1px solid var(--primaryBorder);
                 }
+                .divider {
+                  padding: 0 10px;
+                  &.border {
+                    border-left: 1px solid var(--primaryBorder);
+                  }
+                }
               }
             }
           }
