--- a/less/modal.less
+++ b/less/modal.less
@@ -2359,9 +2359,11 @@ html[data-theme='dark'] {
   max-height: 400px;
 }
 #reportNCCSTdialog-content {
-  text-align: center;
   max-height: 400px;
   padding: 25px;
+  .message {
+    margin-bottom: 15px;
+  }
 }
 #vansPieChartdialog-content {
   height: 78vh;
