Add Toggle All switch in Dashboard Statistics layout settings dialog.

--- a/less/app.less
+++ b/less/app.less
@@ -390,6 +390,15 @@ button.standard:hover:not([disabled]) {
     }
   }
 }
+.dashboard-layout-settings {
+  .toggle-all {
+    width: 100%;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--primaryBorder);
+  }
+}
 #g-progress-container {
   #overlay {
     opacity: 0.2;
