Add table column change and resize functionality. Fix Threats upload encode/decode issue.

--- a/less/app.less
+++ b/less/app.less
@@ -586,6 +586,7 @@ button.standard:hover:not([disabled]) {
   color: var(--primaryContentHeader) !important;
 }
 .MuiTableCell-body {
+  white-space: normal;
   .severity-level {
     float: left;
     width: 90px;
@@ -610,7 +611,6 @@ button.standard:hover:not([disabled]) {
   }
 }
 .mui-table-content {
-  height: 78vh;
   .no-result {
     text-align: center;
     margin-top: 100px;
