Update SOAR settings label. Add sftp connection check before calling HMD IR trigger.

--- a/less/app.less
+++ b/less/app.less
@@ -612,7 +612,7 @@ button.standard:hover:not([disabled]) {
 }
 .mui-table-content {
   div[class^='MUIDataTableResize-resizer-'] {
-    border: 0.1px solid var(--primaryBorder);
+    border: 0.1px dotted var(--primaryBorder);
   }
   .no-result {
     text-align: center;
