--- a/less/login.less
+++ b/less/login.less
@@ -99,12 +99,10 @@ html[data-theme='dark'] {
   }
   .license-group-btn {
     display: flex;
-    justify-content: space-between;
-    #license-activate {
-      width: 36%;
-    }
-    #licenseUpload {
-      width: 60%;
+    flex-direction: column;
+    margin-top: -15px;
+    button {
+      width: 100%;
     }
   }
   #g-footer {
