--- a/less/login.less
+++ b/less/login.less
@@ -99,10 +99,12 @@ html[data-theme='dark'] {
   }
   .license-group-btn {
     display: flex;
-    flex-direction: column;
-    margin-top: -15px;
-    button {
-      width: 100%;
+    justify-content: space-between;
+    #license-activate {
+      width: 36%;
+    }
+    #licenseUpload {
+      width: 60%;
     }
   }
   #g-footer {
