Add host name edit functionality. Add two more search columns for Syslog config.

--- a/less/app.less
+++ b/less/app.less
@@ -3256,9 +3256,14 @@ button.standard:hover:not([disabled]) {
               padding: 10px 15px;
               border-bottom: 1px solid var(--primaryBorder);
             }
-            .title {
+            .title,
+            .name {
               float: left;
               margin-right: 30px;
+            }
+            .name .fg-edit {
+              color: var(--primaryTextColor);
+              cursor: pointer;
             }
             .status {
               display: block;
