Add failure display logic for Host table list.

--- a/less/modal.less
+++ b/less/modal.less
@@ -607,6 +607,10 @@ html[data-theme='dark'] {
           float: right;
           margin-top: 5px;
           margin-right: 10px;
+          .failure {
+            color: #d10d25;
+            margin-right: 5px;
+          }
         }
         .btn {
           float: right;
