--- a/less/modal.less
+++ b/less/modal.less
@@ -2511,3 +2511,35 @@ html[data-theme='dark'] {
     }
   }
 }
+#exprotChartsDialog-content {
+  width: 750px;
+  .calendar-section {
+    overflow: hidden;
+    margin-top: 5px;
+    margin-bottom: 15px;
+  }
+  .host-section {
+
+  }
+  .group-content {
+    width: 100%;
+    max-height: 600px;
+    padding: 15px 15px 0px 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    .export-hostIp {   
+      width: 48%;
+      margin-right: 2%;
+      margin-bottom: 10px;
+    }
+    .export-hostName {
+      width: 50%;
+    }
+    .config-section {
+      margin-left: 5px;
+      label {
+        display: inline-block;
+      }
+    }
+  }
+}
