Implement the Syslog Export Charts and Task Service List.

--- a/less/app.less
+++ b/less/app.less
@@ -164,6 +164,22 @@ button {
 button.standard:hover:not([disabled]) {
   background-color: var(--formBackground) !important;
 }
+.anchorPosition {
+  .MuiPopover-paper {
+    top: 83px !important;
+    right: 10px !important;
+  }
+}
+.c-multi .fg-add,
+.c-multi .fg-close {
+  border: 1px solid var(--primaryBorder);
+}
+.c-multi > .group {
+  button.fg-add {
+    color: #fff;
+    background-color: var(--formCheckRadioColor) !important;
+  }
+}
 .MuiButton-contained {
   box-shadow: none !important;
 }
