--- a/less/app.less
+++ b/less/app.less
@@ -2586,6 +2586,17 @@ button.standard:hover:not([disabled]) {
             input[name='file'] {
               width: 95%;
             }
+            .sms-provider {
+              width: 100%;
+              input {
+                width: auto;
+              }
+            }
+            .phone-chip-input {
+              background-color: #fff;
+              height: 45px;
+              padding: 5px;
+            }
             #autoSettingsAD {
               position: absolute;
               top: -50px;
