Complete auto complete functionality for SMS notifications.

--- a/less/app.less
+++ b/less/app.less
@@ -2586,6 +2586,11 @@ button.standard:hover:not([disabled]) {
             input[name='file'] {
               width: 95%;
             }
+            &.sms-provider {
+              width: 100%;
+              margin-top: 50px;
+              margin-bottom: 0;
+            }
             .sms-provider {
               width: 100%;
               input {
