--- a/less/app.less
+++ b/less/app.less
@@ -2587,20 +2587,21 @@ button.standard:hover:not([disabled]) {
               width: 95%;
             }
             &.sms-provider {
-              width: 100%;
-              margin-top: 50px;
+              margin-top: 10px;
               margin-bottom: 0;
             }
             .sms-provider {
               width: 100%;
-              input {
-                width: auto;
+              .MuiChip-clickable {
+                margin-top: 3px !important;
               }
             }
             .phone-chip-input {
-              background-color: #fff;
-              height: 45px;
+              height: 50px;
               padding: 5px;
+              border: 1px solid #d9d9d9;
+              border-radius: 5px;
+              background-color: #fff;
             }
             #autoSettingsAD {
               position: absolute;
