Start implementing the Vans Patch functionality for Host page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2561,3 +2561,22 @@ html[data-theme='dark'] {
     }
   }
 }
+#vansPatchDialog-content {
+  .vans-patch {
+    padding: 10px;
+    input {
+      height: 35px;
+    }
+    .group .content {
+      padding: 10px 0;
+    }
+    .radio-group {
+      flex-direction: row;
+      margin-top: 10px;
+      margin-left: 2px;
+    }
+    .memo {
+      margin-top: 5px;
+    }
+  }
+}
