Add syslog export chart option for Syslog config.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2527,6 +2527,11 @@ html[data-theme='dark'] {
 }
 #exprotChartsDialog-content {
   width: 800px;
+  .radio-group {
+    flex-direction: row;
+    margin: 10px 0;
+    margin-left: 5px;
+  }
   .calendar-section {
     overflow: hidden;
     margin-top: 5px;
