Add menu for export syslog list.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2372,6 +2372,10 @@ html[data-theme='dark'] {
         margin-right: 110px;
       }
     }
+    .empty {
+      display: block;
+      margin: 15px;
+    }
     .scheduled-list {
       .main-table {
         width: 100%;
