Add FR-MOTP section for HMD settings.

--- a/less/app.less
+++ b/less/app.less
@@ -3834,6 +3834,11 @@ button.standard:hover:not([disabled]) {
             width: 5%;
             margin-left: 1%;
           }
+          .connections-test {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+          }
         }
       }
     }
