Complete the FR-MOTP section for HMD settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -3836,8 +3836,8 @@ button.standard:hover:not([disabled]) {
           }
           .connections-test {
             position: absolute;
-            top: 15px;
-            right: 15px;
+            top: -45px;
+            right: 0;
           }
         }
       }
