Begin adding owner selection for department and account update.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1772,7 +1772,7 @@ html[data-theme='dark'] {
       }
     }
     .group {
-      margin: 10px;
+      margin: 20px 10px;
     }
     .switch-control {
       position: relative;
@@ -2105,6 +2105,15 @@ html[data-theme='dark'] {
     button {
       margin: 0 5px;
     }
+  }
+}
+#renderNameDialog-dialog {
+  max-width: 300px;
+  textarea {
+    margin-bottom: 5px;
+  }
+  .combo-box {
+    margin: 10px 0;
   }
 }
 #fileModal-content {
