--- a/less/app.less
+++ b/less/app.less
@@ -695,7 +695,8 @@ button.standard:hover:not([disabled]) {
     border: 1px solid var(--formInputBorderColor);
     background-color: var(--formBackground);
     border-radius: 4px;
-    width: 100%;
+    border-color: rgba(0, 0, 0, 0.23);
+    width: 100% !important;
   }
   .checkbox-ui,
   .radio-ui {
